--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,21 +15,37 @@
     <p th:if="${message != null}" th:text="${message}"></p>
 </div>
 
-<div th:if="${files != null}" class="border-primary rounded">
-    <th:block th:each="file : ${files}">
-        <span>
-            <img th:src="@{/images/file.png}"/>
-            <small th:text="file.name"></small>
-        </span>
-    </th:block>
-</div>
+<div class="container-fluid">
 
-<div class="text-center rounded border border-dark" style="margin: 50px auto; max-width: 500px;">
-    <form action="/files/upload"
-          enctype="multipart/form-data" method="post">
-        <input type="file" name="file"> <br>
-        <input type="submit" value="Upload">
-    </form>
+    <div class="border-primary rounded">
+        <div th:if="${files != null}">
+            <th:block th:each="file : ${files}">
+                <div class="row m-3">
+                    <div class="col">
+                        <img th:src="@{/images/file.png}" style="max-width: 50px; max-height: 50px;"/>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <a th:href="${file}">[[${file}]]</a>
+                        </div>
+                        <div>
+                            <small>[[${#numbers.formatInteger(files.size, 4, 'COMMA')}]] bytes</small>
+                        </div>
+                    </div>
+                </div>
+            </th:block>
+        </div>
+
+    </div>
+    <div class="border border-secondary rounded">
+        <div class="text-center rounded border border-dark" style="margin: 50px auto; max-width: 500px;">
+            <form action="/files/upload"
+                  enctype="multipart/form-data" method="post">
+                <input type="file" name="file"> <br>
+                <input type="submit" value="Upload">
+            </form>
+        </div>
+    </div>
 </div>
 
 </body>
